--- a/src/themes/bootstrap/5/wt/widgets/item-views/_table-view.scss
+++ b/src/themes/bootstrap/5/wt/widgets/item-views/_table-view.scss
@@ -3,11 +3,19 @@
 
   .Wt-header {
     .Wt-label {
-      padding-inline: 3px;
+      padding-inline: 3px 0px;
+    }
+
+    .Wt-tv-no-rh ~ * > * > .Wt-label {
+      padding-inline-end: 3px;
     }
 
     div[style*="text-align:center;"] .Wt-tv-sh ~ .Wt-label {
-      padding-inline: 16px 0px;
+      padding-inline: 19px 0px;
+    }
+
+    .Wt-tv-no-rh ~ div[style*="text-align:center;"] > * > .Wt-tv-sh ~ .Wt-label {
+      padding-inline-start: 16px;
     }
   }
 
